syntax = "proto3";

package user;

//Methods exposed to client
service UserService {
  rpc authenticateUser (UserRequest) returns (UserReply){}
  rpc createUser (CreateUserRequest) returns (CreateUserReply){}
}

// Message Type definition for user
message UserRequest {
  string username = 1;
  string password = 2;
}

message UserReply {
  int32 _id = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserReply {
  string _id = 1;
}
